# yalm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dworkspaceprojectsdafhnetoml_bool_result.txt  README.md  RECAP.md  STATUS.md  build.bat  dict12_words.txt  docker-compose.yml  questions_demo.md  questions_three_men_demo.md
archive/spl-research/: dict_science5.md  r0x-001-f-function-test.md  r0x-001_prior_art.md  r0x-002-f-function-extraction.md  r0x-003-spl-equilibrium.md  r0x-003_prior_art.md  r0x-004-moe-geometric-gating.md  r0x-005-geometric-generation.md  r0x-README.md  r0x_001_f_test.py  r0x_001_results.json  r0x_001_verdict.md  r0x_001_yalm_space.json  r0x_003_results.json  r0x_003_spl_equilibrium.py  r0x_003_verdict.md
crates/dafhne-cache/: Cargo.toml
crates/dafhne-demo/: Cargo.toml
crates/dafhne-demo/src/: main.rs
crates/dafhne-evolve/: Cargo.toml
crates/dafhne-evolve/src/: analysis.rs  fitness.rs  genome.rs  lib.rs  lineage.rs  main.rs  operators.rs  population.rs  reporting.rs  runner.rs
crates/dafhne-server/: Cargo.toml
crates/dafhne-server/src/: chat.rs  main.rs  mcp.rs  ollama.rs  openai.rs  service.rs
crates/dafhne-server/static/: chat.html
crates/dafhne-wikt-build/: Cargo.toml
crates/dafhne-wikt-build/src/: main.rs  parser.rs
crates/yalm-eval/: Cargo.toml
crates/yalm-eval/src/: lib.rs  main.rs
crates/yalm-evolve/: Cargo.toml
crates/yalm-evolve/src/: analysis.rs  fitness.rs  genome.rs  lib.rs  main.rs  operators.rs  population.rs  reporting.rs  runner.rs
crates/yalm-wikt-build/: Cargo.toml
crates/yalm-wikt-build/src/: main.rs  parser.rs
data/: Three-Men-in-a-Boat.txt
dictionaries/: dict12.md  dict12_test.md  dict18.md  dict18_test.md  dict5.pkg.toml  dict5_2w_test.md  dict5_bool_test.md  dict5_test.md  dict_grammar5.md  dict_math5.md  dict_self5.md  dict_task5.md  grammar18.md  grammar5.md  grammar5_test.md  multispace_test.md  self_test.md  unified_test.md
docs/: architecture.md  design_decisions.md  limitations.md  prior_art.md  results.md  roadmap.md  server.md
prompts/: 01_dict12_closure_audit.md  02_geometric_comprehension_engine.md  03_evolution_self_improvement.md  04_phase5_handoff.md  05_grammar_reinforcement.md  06_surgical_fixes.md  07_dict18_scaling.md  08_sequential_equilibrium.md  09_dictionary_cache.md  09b_llm_cache.md  09c_connector_quality.md  10_dictvict_three_men.md  10b_granularity_probe.md  11_3w_what_who_where.md  11b_entity_priority.md  12_boolean_operators.md  13_basic_writing.md  14_2w_when_why_reasoning.md  15_rich_descriptions.md  16_multispace_architecture.md  17_content_space_integration.md  18_self_space.md  19_bootstrap_loop.md  19b_audit_and_readme.md  19c_code_audit_fixes.md  20_multispace_evolution.md  21_hard_questions.md  21_scaling_open_mode.md  22_dafhne_server.md  23_layered_dictionary.md  24_packages_adapters.md  25_chat_as_config.md  26_flutter_client.md
reports/: 19b_code_audit.md  19b_phase15_gap.md  19c_code_audit_fixes.md  21_hard_questions.md  phase3_report.md
results_multi/: STATUS.md
scripts/: closure_check.py  test_server.sh
texts/: dict5_defs.md  passage1.md  passage1_test.md
(+177 files in other folders)
