[package]
name = "dafhne-evolve"
version = "0.1.0"
edition = "2021"

[dependencies]
dafhne-core = { path = "../dafhne-core" }
dafhne-parser = { path = "../dafhne-parser" }
dafhne-engine = { path = "../dafhne-engine" }
dafhne-eval = { path = "../dafhne-eval" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
ctrlc = "3"
