[package]
name = "dafhne-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dafhne-server"
path = "src/main.rs"

[dependencies]
dafhne-core = { path = "../dafhne-core" }
dafhne-parser = { path = "../dafhne-parser" }
dafhne-engine = { path = "../dafhne-engine" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
tokio-stream = "0.1"
futures = "0.3"
