[package]
name = "dafhne-wikt-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dafhne-wikt-build"
path = "src/main.rs"

[dependencies]
dafhne-cache = { path = "../dafhne-cache" }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
