[package]
name = "yalm-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
yalm-core = { path = "../yalm-core" }
yalm-parser = { path = "../yalm-parser" }
yalm-engine = { path = "../yalm-engine" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
