[package]
name = "yalm-evolve"
version = "0.1.0"
edition = "2021"

[dependencies]
yalm-core = { path = "../yalm-core" }
yalm-parser = { path = "../yalm-parser" }
yalm-engine = { path = "../yalm-engine" }
yalm-eval = { path = "../yalm-eval" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
ctrlc = "3"
