[package]
name = "yalm-wikt-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yalm-wikt-build"
path = "src/main.rs"

[dependencies]
yalm-cache = { path = "../yalm-cache" }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
